--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,10 @@
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
+/repositories/*
 !/log/.keep
 !/tmp/.keep
+!/repositories/.keep
 
 # Ignore Byebug command history file.
 .byebug_history
