--- a/config/database.yml
+++ b/config/database.yml
@@ -24,7 +24,7 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
+test: &test
   <<: *default
   database: just_do_it_test
 
@@ -50,3 +50,6 @@ test:
 production:
   <<: *default
   database: just_do_it_production
+
+cucumber:
+  <<: *test
